--- a/styles.css
+++ b/styles.css
@@ -262,6 +262,24 @@ section {
   box-shadow: 0 4px 8px rgba(0,0,0,0.1);
 }
 
+
+
+
+.qi-gong-flyer {
+  position: absolute;
+  width: 333px;
+  height: auto;
+  border-radius: 20px;
+  box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+  top: 50%;
+  left: 50%;
+  transform: translate(-40%, -48%);
+  z-index: 3;
+}
+
+
+
+
 .project-image-wordpress-2 {
   position: absolute;
   width: auto;
@@ -952,6 +970,55 @@ section {
     box-sizing: border-box;
   }
 
+  .carousel .project-images {
+    height: 280px;
+  }
+
+  .carousel .project-image {
+    width: 154px;
+  }
+
+  .carousel .apple-android-logo {
+    height: 56px;
+  }
+
+  .carousel .project-content {
+    text-align: center;
+  }
+
+  .carousel .project-content h1 {
+    margin-top: 3rem;
+    font-size: 2.2rem;
+    text-align: center;
+    margin-left: 2rem;
+    margin-right: 2rem;
+  }
+
+  .carousel .project-content p {
+    font-size: 0.96rem;
+    text-align: center;
+    margin-left: 2.5rem;
+    margin-right: 2.5rem;
+  }
+
+  .carousel .project-badges {
+    justify-content: center;
+  }
+
+  .carousel .view-project-btn {
+    display: block;
+    width: fit-content;
+    margin: 0 auto;
+  }
+
+  .qi-gong-flyer {
+    height: 333px;
+    width: auto;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%); 
+  }
+
   .project-container {
       grid-template-columns: 1fr;
       gap: 2rem;
@@ -982,6 +1049,14 @@ section {
   .carousel-button.next {
     right: 5px;
     z-index: 2;
+  }
+
+  .carousel-indicators {
+    position: relative;
+    
+    justify-content: center;
+    margin-top: 12rem;
+    margin-bottom: -10rem;
   }
 
   body {
